Docs: carry ci.yml's contents in the handoff so the machine can go
.github/workflows/ci.yml has sat untracked since July because pushing a workflow
file needs a token scope the automation credential does not have. That was
survivable while the file sat on disk; it is not survivable through a machine
migration, and "copy this by hand" is a step that gets skipped.

So the handoff now carries it verbatim in a fenced block. A code block in a docs
file is not a workflow file, so nothing refuses this commit, and the new box can
reconstruct it with a credential that has the scope.

Worth saying plainly in the same breath: landing that file would give this repo
remote CI for the first time. Every branch merged this week was gated locally and
by nothing else.